# pcl_detection

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.bak2  README.md  README_ROS.md  build_release.sh  package.xml
config/: sample_config.yaml
include/adapters/: livox_converter.hpp  marker_converter.hpp
include/pcl_object_detection/: pipeline.hpp
include/pcl_object_detection/core/: centroid_utils.hpp  circle.hpp  circle_extraction.hpp  circle_object.hpp  cluster_extraction.hpp  config.hpp  cylinder.hpp  cylinder_extraction.hpp  cylinder_object.hpp  extractor_factory.hpp  extractors_base.hpp  ground_extraction.hpp  logger_limiter.hpp  normal_estimation.hpp  obb_calculator.hpp  object_base.hpp  object_factory.hpp  obstacle_object.hpp  obstacle_pipeline.hpp  obstacle_pipeline_config.hpp  pipeline.hpp  rectangle.hpp  rectangle_extraction.hpp  rectangle_from_cluster.hpp  rectangle_object.hpp  timer.hpp  wall.hpp  wall_extraction.hpp  wall_object.hpp
include/pcl_object_detection/io/: pointcloud_io.hpp
include/pcl_object_detection/nodes/: points_sample.h
include/pcl_object_detection/ros/: detector_wrapper.hpp  livox_converter.hpp
include/pcl_object_detection/visualization/: pointcloud_visualization.hpp
include/pipeline/: detection_pipeline.hpp
include/utils/: logger.h
launch/: detect_objects.launch  object_detector.launch  obstacle_detection.launch  obstacle_listener.launch  pcl_detection.launch  points_sample.launch
msg/: DetectedObject.msg  ObjectDetectionResult.msg
shell/: obs.bash  obs.sh  obs.zsh  points_sample.sh  test.sh
src/: main.cpp
src/core/: object_base.cpp
src/io/: pointcloud_io.cpp
src/nodes/: detection_visualizer.cpp  detector_node.cpp  object_detector_node.cpp  obstacle_listener.cpp  points_sample.cpp  points_sample.h  points_samples.cpp
